--- a/.gitconfig
+++ b/.gitconfig
@@ -9,4 +9,6 @@
   co = checkout
   br = branch
   cm = commit -m
-  softreset = reset --soft HEAD^
+  sreset = reset --soft HEAD^
+[core]
+  ignorecase = false
